--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ allprojects {
 dependencies {
     api 'com.android.support:design:26.1.0'
     api 'com.google.android.gms:play-services-maps:12.0.0'
+    api 'com.jjoe64:graphview:4.2.1'
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
