--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.example.chesterchin.benoreno"
+        applicationId "com.example.lk.benoreno"
         minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
@@ -31,12 +31,12 @@ dependencies {
     api 'com.android.support:design:26.1.0'
     api 'com.google.android.gms:play-services-maps:12.0.0'
     api 'com.jjoe64:graphview:4.2.1'
+    api 'com.android.support.constraint:constraint-layout:1.1.0'
 
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    /*compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
+    testCompile 'junit:junit:4.12'*/
 }
