--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 
 app/src/debug/res/values/google_maps_api.xml
 app/src/release/res/values/google_maps_api.xml
+.idea/workspace.xml
+.idea/caches/build_file_checksums.ser
+.gradle/buildOutputCleanup/buildOutputCleanup.lock
+.gradle/4.4/taskHistory/taskHistory.lock
+.gradle/4.4/taskHistory/taskHistory.bin
+.gradle/4.4/javaCompile/taskHistory.bin
+.gradle/4.4/javaCompile/javaCompile.lock
+.gradle/4.4/javaCompile/classAnalysis.bin
+.gradle/4.4/fileHashes/fileHashes.lock
+.gradle/4.4/fileHashes/fileHashes.bin
